# TSP-con-pick-up-and-delivery

./: .gitignore  README.md
doc/: Draft.pptx
doc/benchmark/: 00 Instance generator benchmark.xlsx  01 Brute force enumerator benchmark.xlsx  02 Oneil Hoffman enumerator benchmark.xlsx  02a Enumerator benchmark comparison.xlsx  03 Greedy Pickup First benchmark.xlsx  04 Greedy Request Order benchmark.xlsx  05 Greedy Nearest Neighbor benchmark.xlsx  06 Greedy Random benchmark.xlsx  06a Greedy benchmark comparison.xlsx  07 City Insert benchmark.xlsx  08 City Swap benchmark.xlsx  09 Simulated Annealing benchmark.xlsx  10 Tabu Search benchmark.xlsx  11 Large Neighborhood Search benchmark.xlsx  12 Multi Start Local Search benchmark.xlsx  13 Greedy Randomized Adaptive Search Procedure benchmark.xlsx  14 Greedy Randomized Adaptive Search Procedure with Path Relinking benchmark.xlsx  14a Greedy Randomized Adaptive Search Procedure comparison.xlsx  14b Local Search comparison.xlsx  15 Genetic Algorithm benchmark.xlsx  15b All algorithms comparison.xlsx  Tabu Search benchmark.xlsx  output-benchmark.txt
doc/benchmark/instances/: 10-request-weights-random.json  (+28 more)
doc/slideshow/: bibliografia.bib  slideshow.tex
src/: Notes.md  tsppdcli.py
src/cli/: cli.py  tsppdcli.py
src/instances/: 2-request.json
src/package/: LICENSE  README.md  pyproject.toml
src/package/src/tsppd/problem/: generator.py  instance.py  node.py  request.py  weightedEdge.py
src/package/tests/problem/: test_node.py  test_request.py  test_weightedEdge.py
src/tests/: test_node.py
(+53 files in other folders)
