[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsppd"
version = "0.0.1"
authors = [
  { name="Michele Vaccari", email="michele.vaccari@edu.unife.it" },
]
description = "Package providing algorithms for solving TSP with pickup and delivery"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/michele-vaccari/TSP-con-pick-up-and-delivery"
"Bug Tracker" = "https://github.com/michele-vaccari/TSP-con-pick-up-and-delivery/issues"